--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,11 @@
 {% include androidColor.html %}
 </head>
 <body>
-
+    {% if page.toc==true %}
+    <aside class="toc">
+        {% include toc.html html=content %}
+    </aside>
+    {% endif %}
 <!-- 顶部锚点 -->
 <a id="htmlup" name="htmlup"></a>
 <!-- 引入博文顶部选项 -->
