--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1110,3 +1110,10 @@ a{
 #media{
   display: none;
 }
+
+
+@media screen and (max-width:2200px) and (min-width:1200px){
+  .withtoc{
+    padding-left: 260px;
+  }
+}
