--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,11 +30,7 @@
     {% endif %}
   {% endif %}
 
-    {% if page.toc==true %}
-    <aside class="toc">
-      {% include toc.html html=content %}
-    </aside>
-    {% endif %}
+
 
   <!-- 文章内容 -->
   {{ page.content }}
@@ -75,11 +71,18 @@
 </body>
 
 
-{% if page.toc==true %}
+<script src="https://unpkg.com/scrollnav@3.0.1/dist/scrollnav.min.umd.js"></script>
 <script>
-  document.getElementById("main").classList.add("withtoc");
+    const ct = document.querySelector('.post-content');  //".post-content"指向文章内容所在的div，需根据实际情况修改
+    scrollnav.init(ct, {
+        debug: false,
+        easingStyle: 'linear',
+        //section为一级目录，subsection为二级目录
+        //以下两行意为h3为一级目录，h4为二级目录（个人只需要一级目录，所以注释了二级目录）
+        sections: ($('.post-content > h1').length>0) ? 'h3' : 'h4',
+        subSections: ($('.post-content > h1').length>0) ? 'h4' : 'h5',
+    });
 </script>
-{% endif %}
 
 
 </html>
