--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1112,30 +1112,29 @@ a{
 }
 
 
-@media screen and (max-width: 2200px) and (min-width: 1200px) {
-  .withtoc {
-    padding-left: 260px;
-  }
+.scroll-nav__list, .scroll-nav__sub-list {
+  margin: 0;
+  padding-left: 1.4em;
+  list-style-type: none;
+  line-height: 20px;
 }
 
+.scroll-nav__item {
+  margin-bottom: 5px;
+  list-style-type: none;
+}
 
-.toc {
-  width: 240px;
-  height: 100%;
-  left: 30%;
-  position: fixed;
-  z-index: 4;
-  padding: 60px 20px 0 20px;
+.scroll-nav__item--active > a {
+  font-weight: bold;
+  position: relative;
+  color: #000000;
+  text-decoration: none;
 }
-.toc:before {
-  content: "目录";
-  margin: 0 0 1em 1em;
-  font-weight: 700;
-  font-size: 1.2em;
-  display: block;
-  padding-bottom: 0.6em;
-  border-bottom: 3px double #f1f3f5;
+.scroll-nav__item--active > a:hover {
+  color: #000000;
 }
-.toc li:before {
-  content: "";
+
+.scroll-nav__link {
+  color: #000000;
+  text-decoration: none;
 }
