--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,10 +30,22 @@
     {% endif %}
   {% endif %}
 
+    {% if page.toc==true %}
+      <div class="container">  
+        <div class="contents">  
+            {{ page.content }}
+        </div>   
+        <div class="table-of-contents">
+          <h2>Contents</h2>
+          {% include toc.html html=content %}
+        </div>
+      </div>
+    {% else %}
+    <!-- 文章内容 -->
+      {{ page.content }}
+    {% endif %}
 
 
-  <!-- 文章内容 -->
-  {{ page.content }}
   <!-- 引入share模块 -->
   {% include share.html %}
 </div>
@@ -68,22 +80,14 @@
     }
 </script>
 <script src="/assets/js/main.js"></script>
-
-
-<script src="https://unpkg.com/scrollnav@3.0.1/dist/scrollnav.min.umd.js"></script>
-<script>
-    const ct = document.querySelector('.post-content');  //".post-content"指向文章内容所在的div，需根据实际情况修改
-    scrollnav.init(ct, {
-        debug: false,
-        easingStyle: 'linear',
-        //section为一级目录，subsection为二级目录
-        //以下两行意为h3为一级目录，h4为二级目录（个人只需要一级目录，所以注释了二级目录）
-        sections: ($('.post-content > h1').length>0) ? 'h3' : 'h4',
-        subSections: ($('.post-content > h1').length>0) ? 'h4' : 'h5',
-    });
-</script>
-
 </body>
+
+
+<!-- {% if page.toc==true %}
+<script>
+  document.getElementById("main").classList.add("withtoc");
+</script>
+{% endif %} -->
 
 
 </html>
