--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1117,7 +1117,7 @@ a{
 
 
 .container {
-  width: 1050px;
+  width: 1250px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -1134,24 +1134,24 @@ a{
   top: 80px;
   margin-bottom: 80px;
   height: fit-content;
-  margin-left: 50px;
+  margin-left: 30px;
 }
 .container .table-of-contents h2 {
   font-family: fantasy;
-  color: #e32e00;
+  color: #f4f416;
 }
 .container .table-of-contents ul {
   margin-left: 20px;
   list-style-type: revert;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 24px;
-  color: #6b3aba;
+  color: #ffe015;
 }
 .container .table-of-contents ul a {
   color: #12c205;
 }
 .container .table-of-contents ul a:hover {
-  color: #e32e00;
+  color: #24fff4;
   text-decoration: underline;
 }
 
