--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1117,7 +1117,7 @@ a{
 
 
 .container {
-  width: 1250px;
+  width: 1050px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -1126,17 +1126,17 @@ a{
   width: 720px;
 }
 .container .table-of-contents {
-  padding: 10px;
+  padding: 100px;
   border-left: 2px solid #efefef;
-  width: 180px;
+  width: 280px;
   position: -webkit-sticky;
   position: sticky;
   top: 80px;
   margin-bottom: 80px;
   height: fit-content;
-  margin-left: 230px;
+  margin-left: 0px;
 }
-.container .table-of-contents h2 {
+.container .table-of-contents b {
   font-family: fantasy;
   color: #f4f416;
 }
