--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1123,10 +1123,10 @@ a{
   flex-direction: row;
 }
 .container .contents {
-  width: 720px;
+  width: 780px;
 }
 .container .table-of-contents {
-  padding: 100px;
+  padding: 10px;
   border-left: 2px solid #efefef;
   width: 280px;
   position: -webkit-sticky;
@@ -1134,9 +1134,9 @@ a{
   top: 80px;
   margin-bottom: 80px;
   height: fit-content;
-  margin-left: 0px;
+  margin-left: 230px;
 }
-.container .table-of-contents b {
+.container .table-of-contents h2 {
   font-family: fantasy;
   color: #f4f416;
 }
