--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
             {{ page.content }}
         </div>   
         <div class="table-of-contents">
-          <b>Contents</b>
+          <strong>Contents</strong>
           {% include toc.html html=content %}
         </div>
       </div>
