--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@
         </div>   
         <div class="table-of-contents">
           <aa>    Contents</aa>
-          {% include toc.html html=content %}
+          {% include toc.html html=content submenu_class='g' ordered=true %}
         </div>
       </div>
     {% else %}
