--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,15 +29,15 @@
       </div>
     {% endif %}
   {% endif %}
-
+    
     {% if page.toc==true %}
       <div class="container">  
         <div class="contents">  
             {{ page.content }}
         </div>   
         <div class="table-of-contents">
-          <aa>    Contents</aa>
-          {% include toc.html html=content submenu_class='g' ordered=true %}
+          <aa>Contents</aa>
+          {% include toc.html html=content %}
         </div>
       </div>
     {% else %}
