--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1138,12 +1138,13 @@ a{
 }
 
 .container .table-of-contents aa {
-  margin-left: 4px;
   font-family: fantasy;
   font-size: 24px;
   color: rgb(244, 192, 22);
 }
 .container .table-of-contents ul {
+  list-style: none;
+  padding-left: 0;
   margin-left: 4px;
   list-style-type: revert; 
   font-size: 18px;
