--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,13 @@
 
 
 <div class="markdown-body fadeInUp animated">
+    <!-- 网易云 -->
+    {% if page.music-id %}
+    <div class="postpage-subtitle">
+      {% include cloud-music.html %}
+    </div>
+    {% endif %} 
+    
   {% if page.subtitle %}
     {% if page.color.size==0 or page.color==nil %}
       <div class="postpage-subtitle" style="border-left: 8px solid #9A85FF; border-right: 8px solid #9A85FF;">
@@ -31,11 +38,6 @@
       </div>
     {% endif %}
   {% endif %}
-
-  <!-- 网易云 -->
-  {% if page.music-id %}
-  {% include cloud-music.html %}
-  {% endif %} 
     
     <!-- toc -->
     {% if page.toc==true %}
