--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,11 +22,11 @@
 <div class="markdown-body fadeInUp animated">
     <!-- 网易云 -->
     {% if page.music-id %}
-    <div class="postpage-subtitle">
+    <div class="postpage-subtitle" style="border-left: 8px solid #ffff19; border-right: 8px solid #ffff19;">
       {% include cloud-music.html %}
     </div>
     {% endif %} 
-    
+
   {% if page.subtitle %}
     {% if page.color.size==0 or page.color==nil %}
       <div class="postpage-subtitle" style="border-left: 8px solid #9A85FF; border-right: 8px solid #9A85FF;">
