--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1117,6 +1117,7 @@ a{
 
 
 .container {
+  display: block;
   width: 1060px;
   margin: 0 auto;
   display: flex;
@@ -1161,6 +1162,7 @@ a{
 
 @media screen and (max-width: 1060px) {
   .post-content .container {
+    display: block;
     width: 100%;
   }
   .post-content .container .contents {
