--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1152,10 +1152,10 @@ a{
   text-decoration: underline;
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 600) {
   .post-content .container {
     width: 100%;
-
+    display: none;
   }
   .post-content .container .contents {
     width: 100%;
